2002-05-18  Tim Coleman <tim@timcoleman.com>
	* System.Data/DataRow.cs: Move the null check in
	ItemArray set to above the Invalid Cast check, so
	that we don't get null reference exceptions.

2002-05-17  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data.SqlClient/PostgresLibrary.cs: handle
	data value from database being NULL
	
	* System.Data.SqlClient/SqlCommand.cs: for ExecuteReader, 
	allow multiple result sets.  Added new internal class
	SqlResult to pass result set data from SqlCommand
	to SqlDataReader.
	
	* System.Data.SqlClient/SqlDataReader.cs: allow
	multiple result sets.
	
	* System.Data.SqlClient/SqlConnection.cs: moved 
	things around.  Implement IDisposable.
	
	* Test/TestSqlDataReader.cs: test for execution
	of multiple result sets and display the results
	of these multiple results sets
	
	* Test/TestSqlDataAdapter.cs: tweaks

2002-05-17  Tim Coleman <tim@timcoleman.com>
	* System.Data.Common/DbDataAdapter.cs:
		- More implementation of Fill methods
		- Get rid of isDirty flag, because we can just check
			if the table exists
		- Do *not* remove DataTables before Filling them
		- Implicitly open the connection before doing a Fill
			if it does not exist.
	* System.Data.SqlClient/SqlDataAdapter.cs:
		- Minor fixup
	* System.Data/DataTableCollection.cs:
		- Add DataSet to internal, undocumented constructor
		- When a table is created, set its DataSet property
		- Default table name for creation is "Table1" (see .NET)
		- Inherit the ArrayList list from InternalDataCollecitonBase
			and maintain a hashtable between table names and
			DataTables
	* System.Data/DataTable.cs:
		- Add internal dataSet field.  This is used by 
			DataTableCollection when the DataTable is constructed.
	* System.Data/DataSet.cs:
		- Pass a reference to the DataSet when constructing the
			DataTableCollection.

2002-05-16  Tim Coleman <tim@timcoleman.com>
        * System.Data.Common/DbDataAdapter.cs:
                Use table.Rows.Add (itemArray) instead of